fixed footer marign collapse on mobile safari

--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -177,6 +177,7 @@ pre {
 	}	
 
 	.contact-card {
+		-webkit-margin-bottom-collapse: separate;
 		margin-bottom: 40px;
 	}
 
